<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.DefinicoesContaActivity">

    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="200dp"
            android:layout_height="200dp" android:id="@+id/imageFotoPerfilConta"
            android:contentDescription="@string/profile_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/editTextNomePerfil"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextNomePerfil"
            android:hint="@string/account_settings_name"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/imageFotoPerfilConta"
            app:layout_constraintBottom_toTopOf="@+id/textRemoverConta" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toStartOf="@+id/imageButtonAlterarNome"
            android:drawableStart="@drawable/ic_conta_24dp" android:drawablePadding="5dp"/>
    <TextView
            android:text="@string/made_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textFooter"
            android:textAlignment="center" android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
    <ImageButton
            android:layout_width="50dp"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_abrir_fotografias_24dp"
            android:id="@+id/imageButtonFotografias"
            android:contentDescription="@string/open_gallery_description" android:background="@drawable/bg_button"
            app:layout_constraintTop_toBottomOf="@+id/imageFotoPerfilConta"
            app:layout_constraintEnd_toEndOf="@+id/imageFotoPerfilConta"
            app:layout_constraintStart_toEndOf="@+id/imageButtonCamara"
            app:layout_constraintHorizontal_bias="0.5"/>
    <ImageButton
            android:layout_width="50dp"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_abrir_camara_24dp"
            android:id="@+id/imageButtonCamara"
            android:contentDescription="@string/open_camera_description" android:background="@drawable/bg_button"
            app:layout_constraintTop_toBottomOf="@+id/imageFotoPerfilConta"
            app:layout_constraintStart_toStartOf="@+id/imageFotoPerfilConta" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonFotografias"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_confirmar_nome_24dp"
            android:id="@+id/imageButtonAlterarNome"
            android:contentDescription="@string/confirm_name" android:background="@drawable/bg_button"
            app:layout_constraintTop_toTopOf="@+id/editTextNomePerfil"
            app:layout_constraintBottom_toBottomOf="@+id/editTextNomePerfil" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"/>
    <TextView
            android:text="@string/remove_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textRemoverConta"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNomePerfil"
            app:layout_constraintBottom_toTopOf="@+id/textFooter" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textStyle="bold"
            android:textSize="18sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>