<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="16dp">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:padding="5dp" android:layout_gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageProdutoInserir"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/loading"
                android:background="@color/zxing_transparent"
        />

    </LinearLayout>

    <TextView
            android:id="@+id/textDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"/>
    <TextView
            android:id="@+id/editTextAtualizarCodigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"/>

    <TextView
            android:id="@+id/textQuantidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"/>

</LinearLayout>