<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.CriarContaActivity">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageLogoCriarConta"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/thinking_ahead_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/editTextNomeUtilizador"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextNomeUtilizador"
            android:hint="@string/hint_name"
            app:layout_constraintTop_toBottomOf="@+id/imageLogoCriarConta"
            app:layout_constraintBottom_toTopOf="@+id/editTextCriarEmail"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            android:drawableStart="@drawable/ic_username_24dp" android:drawablePadding="5dp"
            android:autofillHints=""/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTextCriarEmail"
            android:imeOptions="actionNext"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress|textEmailAddress|textEmailSubject"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/editTextNomeUtilizador"
            app:layout_constraintBottom_toTopOf="@+id/editTextCriarPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTextNomeUtilizador"
            app:layout_constraintStart_toStartOf="@+id/editTextNomeUtilizador"
            android:drawableStart="@drawable/ic_email_24dp" android:drawablePadding="5dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword|textWebPassword"
            android:ems="10"
            android:id="@+id/editTextCriarPassword"
            android:imeOptions="actionNext"
            android:hint="@string/password"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/editTextCriarEmail"
            app:layout_constraintBottom_toTopOf="@+id/editTextConfirmarPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTextCriarEmail"
            app:layout_constraintStart_toStartOf="@+id/editTextCriarEmail"
            android:drawableStart="@drawable/ic_password_24dp" android:drawablePadding="5dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTextConfirmarPassword"
            android:imeOptions="actionNext"
            android:inputType="textPassword|textWebPassword" android:hint="@string/confirm_password"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/editTextCriarPassword"
            app:layout_constraintBottom_toTopOf="@+id/buttonCriarConta"
            app:layout_constraintStart_toStartOf="@+id/editTextCriarPassword"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonPasswordCriarConta"
            android:drawableStart="@drawable/ic_password_24dp" android:drawablePadding="5dp"/>
    <ImageButton
            android:layout_width="50dp"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_mostrar_password_24dp"
            android:id="@+id/imageButtonPasswordCriarConta"
            android:background="@drawable/bg_button"
            android:contentDescription="@string/image_show_hide_password"
            app:layout_constraintTop_toTopOf="@+id/editTextConfirmarPassword"
            app:layout_constraintBottom_toBottomOf="@+id/editTextConfirmarPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTextCriarPassword"/>
    <Button
            android:text="@string/create_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/buttonCriarConta"
            android:background="@drawable/bg_button"
            app:layout_constraintTop_toBottomOf="@+id/editTextConfirmarPassword"
            app:layout_constraintBottom_toTopOf="@+id/textFooter2"
            app:layout_constraintEnd_toEndOf="@+id/editTextCriarPassword"
            app:layout_constraintStart_toStartOf="@+id/editTextCriarPassword"/>
    <TextView
            android:text="@string/made_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textFooter2"
            android:textAlignment="center" android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>