<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.AdicionarFraseActivity">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageLogoAdicionarFrase"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/editTextAutor" android:src="@drawable/thinking_ahead_logo"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/made_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textFooter"
            android:textAlignment="center" android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonConfirmarFrase"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextAutor"
            android:hint="@string/phrase_author"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/imageLogoAdicionarFrase"
            app:layout_constraintBottom_toTopOf="@+id/editTextFrase" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_autor_24dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editTextFrase"
            android:hint="@string/phrase"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/editTextAutor"
            app:layout_constraintBottom_toTopOf="@+id/buttonConfirmarFrase"
            app:layout_constraintEnd_toEndOf="@+id/editTextAutor"
            app:layout_constraintStart_toStartOf="@+id/editTextAutor"
            android:drawableStart="@drawable/ic_frase_24dp"
            android:drawablePadding="5dp"/>
    <Button
            android:text="@string/confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/buttonConfirmarFrase"
            android:background="@drawable/bg_button"
            app:layout_constraintTop_toBottomOf="@+id/editTextFrase"
            app:layout_constraintBottom_toTopOf="@+id/textFooter"
            app:layout_constraintEnd_toEndOf="@+id/editTextFrase"
            app:layout_constraintStart_toStartOf="@+id/editTextFrase"
    />
</androidx.constraintlayout.widget.ConstraintLayout>