<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.RemoverContaActivity">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagePerfilRemoverConta"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/thinking_ahead_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/editTextPasswordRemoverConta"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:text="@string/made_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textFooterRemoverConta"
            android:textAlignment="center" android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
    />

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTextPasswordRemoverConta"
            android:hint="@string/password"
            android:autofillHints="" android:inputType="textPassword|textWebPassword"
            app:layout_constraintTop_toBottomOf="@+id/imagePerfilRemoverConta"
            app:layout_constraintBottom_toTopOf="@+id/buttonConfirmarRemoverConta"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonMostrarPasswordRemover"
            android:drawableStart="@drawable/ic_password_24dp" android:drawablePadding="5dp"/>
    <ImageButton
            android:layout_width="50dp"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_mostrar_password_24dp"
            android:id="@+id/imageButtonMostrarPasswordRemover"
            android:background="@drawable/bg_button"
            android:contentDescription="@string/image_show_hide_password"
            app:layout_constraintTop_toTopOf="@+id/editTextPasswordRemoverConta"
            app:layout_constraintBottom_toBottomOf="@+id/editTextPasswordRemoverConta"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"/>
    <Button
            android:text="@string/confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/buttonConfirmarRemoverConta"
            android:background="@drawable/bg_button"
            app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRemoverConta"
            app:layout_constraintBottom_toTopOf="@+id/textFooterRemoverConta"
            app:layout_constraintEnd_toEndOf="@+id/imageButtonMostrarPasswordRemover"
            app:layout_constraintStart_toStartOf="@+id/editTextPasswordRemoverConta"/>
</androidx.constraintlayout.widget.ConstraintLayout>